Cyberduck
https://cyberduck.io/

7.0.0
- [Feature] Segmented downloads with multiple connections per file (#10115)

6.9.5
- [Bugfix] Allow password input in bookmark window
- [Bugfix] Existing metadata not displayed (S3) (#10647)

6.9.4
- [Bugfix] Connect button not working to initiate a connection (#10621)
- [Bugfix] Multipart uploads fail if key begins or ends with whitespace character (S3) (#10628)
- [Bugfix] Open OneNote notebooks in web browser (OneDrive)
- [Bugfix] Failure uploading files larger than 100GB (S3) (#10612)

6.9.3
- [Bugfix] RFC compliant parsing of URI parameters (CLI)
- [Bugfix] Failure displaying alert window for multiple consecutive transfer failures
- [Bugfix] Checksum verification disabled by default for file transfers
- [Bugfix] Add --login option to executed shell for "Open in Terminal" feature
- [Bugfix] Disable transfer acceleration for AWS GovCloud (S3)
- [Bugfix] Login using temporary tokens from STS to AWS GovCloud (S3) (#10594)
- [Bugfix] Support auto-configuration from ~/.aws/credentials for AWS GovCloud and Amazon S3 China (S3)
- [Bugfix] Modification date not applied when copying file between browser windows (#10592)
- [Bugfix] Unable to delete incomplete multipart upload (S3) (#10568)
- [Bugfix] Updated localizations

6.9.2
- [Bugfix] Failure using RSA/ECDSA private in new OpenSSH format (#10552)
- [Bugfix] Prompt to select parent folder for file dragged to upload (Mac App Store) (#10580)

6.9.1
- [Bugfix] Fix code signature designated requirement issue (Mac App Store)

6.9.0
- [Localize] Estonian Localization
- [Feature] Default connection profile for Microsoft Sharepoint Online (#10115)
- [Feature] Support for eu-west-3 (Stockholm) region (S3)
- [Feature] Improve listing performance for versioned buckets (S3) (#10426)
- [Feature] Add --profile option to select connection profile (CLI)
- [Feature] Add --nochecksum option to skip verifying checksums (CLI)