@@ -46,8 +46,6 @@
         ul li ul li {
             list-style-type: disc;
         }
-
-
     </style>
 </head>
 
@@ -75,6 +73,10 @@
     <li><span class="label label-warning">Bugfix</span> Allow password input in bookmark window</li>
     <li><span class="label label-warning">Bugfix</span> Existing metadata not displayed (S3) (<a
         href="https://trac.cyberduck.io/ticket/10621">#10647</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Browser always shows modification time in UTC timezone (Windows)
+        (<a
+            href="https://trac.cyberduck.io/ticket/10629">#10629</a>)
     </li>
 </ul>
 
