@@ -7,6 +7,7 @@ https://cyberduck.io/
 6.9.5
 - [Bugfix] Allow password input in bookmark window
 - [Bugfix] Existing metadata not displayed (S3) (#10647)
+- [Bugfix] Browser always shows modification time in UTC timezone (Windows) (#10629)
 
 6.9.4
 - [Bugfix] Connect button not working to initiate a connection (#10621)
